# worp-rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  commands.fish  commands.sh  journal.txt  lib.rs  trash.txt
.resources/index_seeders/: 100_rows_5kb_each.txt  calvinHobbesQuotesCmds.sh  data-sources.txt  quotes.txt  tinyBulk.txt
.resources/index_seeders/emails_100000/: 100,000 USA Email Address copy 1.TXT  100,000 USA Email Address copy 2.TXT  100,000 USA Email Address copy 3.TXT  100,000 USA Email Address copy 4.TXT  100,000 USA Email Address copy 5.TXT  100,000 USA Email Address copy 6.TXT  100,000 USA Email Address copy 7.TXT  100,000 USA Email Address copy 8.TXT  100,000 USA Email Address copy 9.TXT  IMPORTANT.txt
docs_generator/: .gitignore  getLineCount.js  index.js  package.json
notes/: .gitignore  index.txt  sept22.txt
notes/worp/: benchmarkingProject.txt  competition.txt  cpp_notes.txt  ec2_ec2_falcon.py  ec2_ec2_flask.py  ec2_file_read.py  ec2dynamod_begins_with.py  ec2dynamodb.py  ec2dynamodb2.py  ec2dynamodbMumbai.py  ec2s3-numpy.py  ec2wasabi.py  esInLambda.txt  exampleQueryForRossOct22.txt  file_open_test.py  indexing.py  intersection.py  lambda_dynamodb.py  lambda_lambda_latency.py  notes.txt  packet_wasabi.py  parallel.py  postgres_stuff.txt  privateDescription.txt  redis-test.py  resources.txt  s3.py  serverfull_design.txt  size_100kb.txt  size_10kb.txt  size_1kb.txt  size_1mb.txt  size_400kb.txt  size_5kb.txt  spot_pricing.txt  todo.py  todo.txt  trash.py
notes/worp/business/: aws_pricing.txt  competition.txt  roadmap.txt  worp_description_for_ross.txt
notes/worp/cpp/: helloworld.cpp  stuarthelper.h
notes/worp/cython/: hello.c  hello.pyx  setup.py  test.py
notes/worp/cython-intersection-test/: hello.c  hello.pyx  test.py
notes/worp/design/v3/: emoijs.txt  events.md  todo.txt  v3.md
notes/worp/levenshtein/: automata-test.py  automata.py  fst-rust.py  fstSet.fst  levenshtein_julesjacobs.py  s.p  stemmer-test.py
notes/worp/webstuff/: chartjsDemo.html
src/: __main.rs  dirStuff.rs  ferret.rs  global.rs  h.rs  main.rs  multiIiIntersection.rs  rocksdb_tools.rs  stateManagement.rs  tokenizing.rs  worpError.rs
webapp/: .prettierrc.json  package-lock.json  package.json
webapp/src/: App.tsx  ReduxRoot.tsx  configureStore.tsx  global.ts  index.tsx  rate-limiter.ts  util.ts  withRoot.tsx
webapp/src/actions/: index.ts  todo.ts
webapp/src/components/: HomeBox.tsx  QueryHistoryGraph.tsx  TodoDialog.tsx  TodoTable.tsx  index.ts
webapp/src/model/: index.ts  todo.ts
webapp/src/pages/: HomePage.tsx  QueryPage.tsx  TodoPage.tsx  index.ts
webapp/src/reducers/: createReducer.ts  index.ts  todo.ts
webapp/src/worp/: index.ts  worp-impl.ts  worp-mock.ts  worp.ts
webapp/typings/: misc.d.ts
