[package]
name = "worp-rust"
version = "0.1.0"
authors = ["stuartrobinson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# postgres = {version="0.17.0-alpha.1", features=["with-chrono", "with-time"]}

#actix-web = "2.0"
#actix-rt = "1.0.0"
#postgres_array = "0.10.0"
#postgres-types = "0.1.0"
#postgres = "0.17.0"

#postgres = { version = "0.17", features = ["with-chrono-0_4"] }
#postgres_array = "0.10.0"
#sled = "0.30.3"
#mongodb = "0.9.0"

[dependencies]
##actix-web = "2.0"
##actix-rt = "1.0.0"
#
##serde = "1.0.104"


##time = "0.1.14"
##bson = "0.14.0"
##ndarray = "0.13.0"
##hyper-tls = "0.4.1"
##url = "1.0"
##ws = "0.9.1"
##websocket = "0.20.0"

##reqwest = "0.10.1"
##tokio-core = "0.1.17"
##futures = "0.1.29"
#
#
##reqwest = { version = "0.10", features = ["json"] }
#
##actix-web = "2.0.0"
##actix-rt = "1.0.0"
#
##regex = "1.1.8"
#
##regex = { version = "1.1.8", features = ["pattern"] }
#
##lipsum = "0.6" #sucks, not random
#
##jen = { version = "1.0", default-features = false }

#
#rocksdb = "0.13.0"
#

#
#cmd_lib = "0.7.8"
#
#lazy_static = "1.4.0"
#
##futures = "0.3.4"
#futures = "0.1"
#

#hyper = "0.12"
#tokio = { version = "0.2", features = ["full"] }
#pretty_env_logger = "0.3"

#reqwest = "0.10"

#reqwest = "0.10.1"
#tokio-core = "0.1.17"
#futures = "0.1.29"
#reqwest = { version = "0.10", features = ["json"] }
######################################################################

# rusoto_core = "0.42"
# rusoto_dynamodb = "0.42"
# log = "0.4"

# cmd_lib = "0.7.8"

rocksdb = { git = "https://github.com/iSynaptic/rust-rocksdb.git", branch = "ops-and-structure" }


rayon = "1.3.0"
walkdir = "2.3.1"
rand = "0.7.3"

num-format = "0.4.0"

bincode = "1.2.1"



# toml = "0.5"

lazy_static = "1.4.0"

# hyper = "0.13"
# tokio = { version = "0.2", features = ["full"] }

tokio = { version = "0.2", features = ["full"] }
warp = "0.2"

url = "2.1.1"

# bytes = "0.4"

# magic-crypt = "2.1.9"

# percent-encoding = "2.1.0"

serde = { version = "1.0.116", features = ["derive"] }

# serde_derive = "1.0.116"

serde_json = { version = "1.0", features = ["preserve_order"] }

# regex = "1"
# unidecode = "0.3.0"
snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", branch = "master" }

# uuid = "0.8"
uuid = { version = "0.8", features = ["v4"] }

binary-heap-plus = "0.4"

# comma = "0.1.2"
shellwords = "1.1.0"

bytes = "0.5"

# utf16_literal = "0.2.1"

chrono = "0.4"
queues = "1.0.2"

# notify = "4.0.15"

fs_extra = "1.2.0"

# field_types = "1.1.0"     # i can't see the value in this

# hmac-sha256 = "0.1.6"

rust-argon2 = "0.8.2"

# # for custom "invalid query" error message http response # doesn't work cos "filter" is private
# futures = "0.3.8"
# serde_urlencoded = "0.7"









[profile.dev]
debug = 0


# [dev-dependencies]
# pretty_env_logger = "0.4"       # what is this?